# SoftAdapt

./: README.md  pyproject.toml
softadapt/algorithms/: loss_weighted_variant.py  normalized_slopes_variant.py  original_variant.py
softadapt/base/: _softadapt_base_class.py
tests/: test_softadapt_original_variant.py
