[tool.poetry]
packages = [{include = "softadapt"}]

[project]
name = "softadapt_numpy"
version = "0.0.5"
description = "SoftAdapt: Techniques for Adaptive Loss Weighting of Neural Networks with Multi-Part Loss Functions"
authors = [
    {name = "Gerald Cuder", email = "gerald.cuder@icloud.com"},
    {name = "A. Ali Heydari", email = "aliheydari@ucdavis.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["Physics-Informed Neural Networks", "Balancing PINNs Loss", "Adaptive-Weighting", "Multi-Task-Nerual-Networks Optimization", "Gradient-Descent-Weighting", "Machine Learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/dr-aheydari/SoftAdapt"

[tool.poetry.dependencies]
python = "^3.10"
findiff = "*"
tqdm = ">=4.47.0"
numpy = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
